--- a/app/views/game.html
+++ b/app/views/game.html
@@ -1,23 +1,27 @@
-<div class="well">Welcome to Blackjack!</div>
-<p>test pare</p>
-
-<form role="form">
-  <div class="form-group" ng-show="!playerReady">
-    <label for="name" >Please enter your name</label>
-    <input type="name" class="form-control" id="name" placeholder="Your name.." ng-model="playerName" >
-    <button type="submit" class="btn btn-default"  ng-click="gameStart()">Submit</button>
+<div class="container-fluid" >
+  <div class="well">
+    <h1>Welcome to Blackjack!</h1>
   </div>
+</div>
 
 
 
-</form>
+<div class="container-fluid">
+  <form role="form">
+    <div class="form-group" ng-show="!playerReady">
+      <label for="name" >Please enter your name</label>
+      <input type="name" class="form-control" id="name" placeholder="Your name.." ng-model="playerName" >
+      <button type="submit" class="btn btn-default"  ng-click="gameStart()">Submit</button>
+    </div>
+  </form>
+</div>
 
 <!-- || !canRestart -->
-<div class="container" ng-show="gameinProgress">
-  <div class="container" >
+<div class="container-fluid" ng-show="gameinProgress">
+  <div class="container-fluid" >
     <div class="jumbotron">
 
-        <label ng-show="playerReady">Welcome {{playerName}}!</label>
+        <h2 ng-show="playerReady">Welcome {{playerName}}!</h2>
 
         <div ng-hide="canRestart">
           <button type="submit" class="btn btn-info" ng-click="deal()" ng-hide="canHitOrStay">Deal</button>
@@ -26,7 +30,7 @@
         </div>
         <label>Player Cards</label>
         <button class="btn btn-warning" ng-click="reStart()" ng-show="canRestart">restart</button>
-        <h1 ng-show="gameinProgress">Your score is {{player.Score}}</h1>
+        <h3 ng-show="gameinProgress">Your score is {{player.Score}}</h3>
         <div >
           <playing-card id="card" suit="{{card.suit}}" rank="{{card.rank}}"  ng-repeat="card in player.Cards"/>
         </div>
@@ -34,10 +38,10 @@
     </div>
   </div>
 
-  <div class="container">
+  <div class="container-fluid">
     <div class="jumbotron">
       <label>Dealer Cards</label>
-      <h1 ng-show="gameinProgress">Dealer is {{dealer.Score}}</h1>
+      <h3 ng-show="gameinProgress">Dealer is {{dealer.Score}}</h3>
       <playing-card suit="{{card.suit}}" rank="{{card.rank}}" ng-repeat="card in dealer.Cards"/>
 
     </div>
@@ -45,9 +49,3 @@
 </div>
 
 
-
-
-
-
-
-</form>
